# DataRipper

./: .gitignore  README.md  _config.yml  app.py  app_no_gui.py  file_diff_util.py  pylintrc  pyproject.toml  requirements.txt  run_parser.py  scrollable_window.py
.github/workflows/: jekyll-gh-pages.yml
DesktopApp/: SunHaven_Linker.py  SunHaven_Monobehaviour_CleanerApp.py  app_settings.py  assets_parser.py  datum.py  file_tags.py  item_category.py  linker_function.py  linker_registry.py  parse_serialized_data.py  parser.py  progress.py
DesktopApp/Modules/: SunHaven_Animals.py  SunHaven_Book.py  SunHaven_Cutscene.py  SunHaven_Destructible.py  SunHaven_Dialogue.py  SunHaven_DropTable.py  SunHaven_FishSpawner.py  SunHaven_FishingNet.py  SunHaven_GiftTable.py  SunHaven_Item.py  SunHaven_Merchant.py  SunHaven_Quest.py  SunHaven_Recipe.py  SunHaven_RecipeList.py  SunHaven_Seed.py  SunHaven_StattedItem.py  SunHaven_Tool.py  SunHaven_Utilities.py  entity_with_drops.py
DesktopApp/asset_ripper_parser/: exported_file_parser.py  index_files.py  outputs.py  parse_sprite_sheet.py  parser_registry.py  prefab_parser.py  utils.py
_posts/: Intro.md
asset_ripper_parser/: file_tags.py  index_files.py  outputs.py  parse_exported_file.py  parse_serialized_data.py  parse_sprite_sheet.py  parser_registry.py  serialized_entry_type.py  utils.py
asset_ripper_parser/models/: barn_animal.py  bundle.py  clothing.py  cutscene.py  dialogue.py  fish_spawn.py  furniture.py  gift_table.py  item.py  location.py  mail.py  memory_loss_potion_response.py  (+9 more)
progress_bar_styles/: rnpc_progress_bar.py
(+39 files in other folders)
